# rlg

./: .geminiignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PKGBUILD  README.md  SECURITY.md  TEMPLATE.md  book.toml  build.rs  codecov.yml  config.json  crates.js  deny.toml  flake.nix  glama.json  help.html  index.html  lcov.info  rlg.spec  rustfmt.toml  search-index.js  server.json  settings.html  src-files.js  tarpaulin.toml
.cargo/: audit.toml
.github/: renovate.json
.github/workflows/: audit.yml  bench-publish.yml  cargo-vet.yml  check.yml  ci.yml  coverage.yml  document.yml  examples-smoke.yml  fuzz-smoke.yml  kani.yml  lint.yml  loom.yml  mcp-inspect.yml  miri.yml  pages.yml  publish-mcp.yml  release.yml  semver-checks.yml  test.yml
benches/: bench.rs  competitive_bench.rs  config_bench.rs  log_bench.rs
crates/rlg/: Cargo.toml  README.md
crates/rlg-cli/: Cargo.toml  README.md
crates/rlg-cli/benches/: parse.rs
crates/rlg-cli/examples/: filter_by_attribute.rs  pipeline.rs
crates/rlg-cli/src/: lib.rs  main.rs
crates/rlg-cli/tests/: integration.rs  proptest_filter.rs
crates/rlg-ebpf/: Cargo.toml  README.md
crates/rlg-ebpf/benches/: enrich.rs
crates/rlg-ebpf/examples/: chain.rs  enrich.rs
crates/rlg-ebpf/src/: lib.rs
crates/rlg-ebpf/tests/: integration.rs
crates/rlg-mcp/: Cargo.toml  README.md
crates/rlg-mcp/benches/: tail.rs
crates/rlg-mcp/examples/: dispatch.rs  library_mode.rs
crates/rlg-mcp/src/: lib.rs  main.rs
crates/rlg-mcp/tests/: integration.rs
crates/rlg-otlp/: Cargo.toml  README.md
crates/rlg-otlp/benches/: serialise.rs
crates/rlg-otlp/examples/: async_export.rs  circuit_breaker.rs  grpc_export.rs  honeycomb.rs
crates/rlg-otlp/src/: async_http.rs  backoff.rs  grpc.rs  lib.rs
crates/rlg-otlp/tests/: integration.rs
crates/rlg-redact/: Cargo.toml  README.md
crates/rlg-redact/benches/: scrub.rs
crates/rlg-redact/examples/: custom_patterns.rs  scrub.rs
crates/rlg-redact/src/: lib.rs
crates/rlg-redact/tests/: integration.rs
crates/rlg-report/: Cargo.toml  README.md
crates/rlg-report/benches/: aggregate.rs
crates/rlg-report/examples/: digest.rs
crates/rlg-report/src/: lib.rs  main.rs
crates/rlg-report/tests/: cli.rs
crates/rlg-test/: Cargo.toml  README.md
crates/rlg-test/benches/: capture.rs
crates/rlg-test/examples/: capture.rs
crates/rlg-test/src/: lib.rs
crates/rlg-test/tests/: integration.rs
crates/rlg-tower/: Cargo.toml  README.md
crates/rlg-tower/benches/: layer.rs
crates/rlg-tower/examples/: echo.rs
crates/rlg-tower/src/: lib.rs
crates/rlg-tower/tests/: integration.rs
crates/rlg-wasm/: Cargo.toml  README.md
crates/rlg-wasm/benches/: build.rs
crates/rlg-wasm/examples/: hello.rs
crates/rlg-wasm/src/: lib.rs
crates/rlg-wasm/wit/: rlg.wit
crates/rlg/benches/: bench.rs  config_bench.rs  log_bench.rs
crates/rlg/doc/: introduction.md
crates/rlg/doc/how-to/: fluent-api.md
crates/rlg/examples/: example.rs  example_lib.rs  example_log_format.rs  example_log_level.rs  example_macros.rs  example_utils.rs
crates/rlg/src/: config.rs  datetime.rs  engine.rs  error.rs  init.rs  kani_proofs.rs  lib.rs  log.rs  logger.rs  sharded_queue.rs  sink.rs  tui.rs  utils.rs
crates/rlg/tests/: loom_engine.rs  proptest_round_trip.proptest-regressions  proptest_round_trip.rs  test_config.rs  test_config_comprehensive.rs  test_config_coverage.rs  test_config_errors.rs  test_coverage_final.rs  test_coverage_gaps.rs  test_coverage_v007.rs  test_edge_cases.rs  test_engine_high_perf.rs  test_fluent_api.rs  test_init_lifecycle.rs  test_lib.rs  test_log_comprehensive.rs  test_log_errors.rs  test_log_format.rs  test_log_io_errors.rs  test_log_level.rs  test_log_rotation.rs  test_macros.rs  test_new_modules.rs  test_tracing.rs  test_tui_and_sinks.rs  test_utils.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
debian/: debcargo.toml
docs/: IMPLEMENTATION-PLAN-v0.1.0.md  OSS-FUZZ.md  SUMMARY.md
docs/adr/: 0001-loom-verified-ring-buffer.md  0002-fuzz-strategy.md  0003-property-tested-formats.md  0004-kani-verified-invariants.md  0012-ebpf-enricher.md  (+10 more)
examples/: example.rs  example_config.rs  example_lib.rs  example_log_format.rs  example_log_level.rs  example_macros.rs  rlg.rs
fuzz/: Cargo.toml  README.md
fuzz/.cargo/: config.toml
fuzz/fuzz_targets/: config_load.rs  log_format_from_str.rs  parse_record.rs  redact_scrub.rs
pkg/: VERIFY.md
rlg/: all.html  constant.VERSION.html  enum.LogFormat.html  enum.LogLevel.html  index.html  macro.macro_debug_log!.html  macro.macro_debug_log.html  macro.macro_error_log!.html  macro.macro_error_log.html  macro.macro_fatal_log!.html  macro.macro_fatal_log.html  macro.macro_info_log!.html  macro.macro_info_log.html  macro.macro_log!.html  macro.macro_log.html  macro.macro_log_if!.html  macro.macro_log_if.html  macro.macro_log_to_file!.html  macro.macro_log_to_file.html  macro.macro_log_with_metadata!.html  macro.macro_log_with_metadata.html  macro.macro_print_log!.html  macro.macro_print_log.html  macro.macro_set_log_format_clf!.html  macro.macro_set_log_format_clf.html  macro.macro_trace_log!.html  macro.macro_trace_log.html  macro.macro_warn_log!.html  macro.macro_warn_log.html  sidebar-items.js  struct.Log.html
src/: config.rs  datetime.rs  engine.rs  error.rs  init.rs  lib.rs  log.rs  log_format.rs  log_level.rs  logger.rs  macros.rs  rotation.rs  sink.rs  tracing.rs  tui.rs  utils.rs
supply-chain/: config.toml
tests/: test_config.rs  test_config_comprehensive.rs  test_config_coverage.rs  test_config_errors.rs  test_coverage_final.rs  test_coverage_gaps.rs  test_coverage_v007.rs  test_edge_cases.rs  test_engine_high_perf.rs  test_fluent_api.rs  test_init_lifecycle.rs  test_lib.rs  test_log_comprehensive.rs  test_log_errors.rs  test_log_format.rs  test_log_io_errors.rs  test_log_level.rs  test_log_rotation.rs  test_macros.rs  test_new_modules.rs  test_tracing.rs  test_tui_and_sinks.rs  test_utils.rs
xtask/: Cargo.toml  all.html  fn.main.html  index.html
(+73 files in other folders)
