[package]
# Metadata about the package.
authors = ["RustLogs Contributors"]
categories = [
    "asynchronous",
    "development-tools::debugging",
    "development-tools",
    "data-structures",
]
description = """
    A Rust library that implements application-level logging with a simple,
    readable output format. Features include log rotation, network logging, and support for multiple structured formats like JSON, CEF, and more.
"""
documentation = "https://docs.rs/rlg"
edition = "2021"
exclude = ["/.git/*", "/.github/*", "/.gitignore", "/.vscode/*"]
homepage = "https://rustlogs.com/"
keywords = ["debugging", "log", "rlg", "logging", "tracing"]
license = "MIT OR Apache-2.0"
name = "rlg"
repository = "https://github.com/sebastienrousseau/rlg/"
rust-version = "1.87.0"
version = "0.0.7"
include = [
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[[bench]]
# [[bench]] sections define benchmarks.
name = "benchmark"
harness = false
path = "benches/bench.rs"

[profile.bench]
# Profile for benchmarks.
debug = true

[dependencies]
# Dependencies are only used for building.
config = "0.15.19"
dtt = "0.0.9"
envy = "0.4.2"
hostname = "0.4.2"
log = "0.4.29"
notify = "8.2.0"
once_cell = "1.21.3"
parking_lot = "0.12.5"
rayon = "1.11.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_yml = "0.0.12"
tempfile = "3.26.0"
thiserror = "2.0.18"
miette = { version = "7.5.0", features = ["fancy"], optional = true }
tokio = { version = "1.50.0", features = ["full"]}
toml = "1.0.4"
vrd = "0.0.8"
tracing-core = "0.1.33"

# Optional dependencies for feature flags
reqwest = { version = "0.13.2", optional = true }
itoa = "1.0.17"
ryu = "1.0.23"
crossbeam-queue = "0.3.12"
libc = "0.2.182"
crossbeam-utils = "0.8.21"

[build-dependencies]
version_check = "0.9.5"

[dev-dependencies]
# Development dependencies are only used for testing and building.
criterion = "0.8.2"
tokio-test = "0.4.5"
tracing = "0.1.41"

[lib]
# Library configuration.
crate-type = ["lib"]
name = "rlg"
path = "src/lib.rs"

[features]
# No default features
default = []
debug_enabled = []
miette = ["dep:miette"]

[package.metadata.docs.rs]
# Specify arguments for rustdoc to enhance documentation quality.
rustdoc-args = [
    "--generate-link-to-definition",
    "--cfg", "docsrs",
    "--document-private-items",
    "--display-warnings"
]
# Build docs with all crate features enabled to cover the entire API.
all-features = true
# Target platform for the docs, ensuring compatibility with common Linux servers.
targets = ["x86_64-unknown-linux-gnu"]

# Linting config
[lints.rust]

## Warn
# box_pointers = "warn"
missing_copy_implementations = "warn"
missing_docs = "warn"
unstable_features = "warn"
# unused_crate_dependencies = "warn"
unused_extern_crates = "warn"
# unused_results = "warn"

## Allow
bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

## Forbid
# missing_docs = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

## Deny
dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"


[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = "s"
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
