[workspace]
resolver = "2"
members = [
    "crates/rlg",
    "crates/rlg-cli",
    "crates/rlg-mcp",
    "crates/rlg-otlp",
    "crates/rlg-redact",
    "crates/rlg-report",
    "crates/rlg-test",
    "crates/rlg-tower",
    "crates/rlg-wasm",
    "crates/xtask",
]
# `fuzz/` is a cargo-fuzz nested crate. Excluded from the workspace
# so `libfuzzer-sys` and nightly-only build flags never leak into
# normal `cargo build` / `cargo test`. See `fuzz/README.md` and
# `docs/adr/0002-fuzz-strategy.md`.
exclude = ["fuzz"]

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = "unwind"
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
# Optimize for speed (3) over size ("s"). The ingestion path is a
# hot library surface — `Log::fire()` dispatches through an
# `ArrayQueue::push` in ~1.4 µs, and the per-format `Display`
# implementations get fully inlined and vectorized at opt-level 3.
opt-level = 3
# Keep overflow checks: the engine handles caller-supplied
# attributes (`Log::with::<T>(...)`) and wraparound on the
# session-ID and metrics counters could break invariants under
# adversarial input.
overflow-checks = true
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false

[profile.bench]
debug = true
