[package]
name = "rlg-cli"
version = "0.0.9"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
`rlg` — `jq` for structured logs. Tail, filter, and convert log streams
across all 14 `rlg` formats from the command line.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-cli"
readme = "README.md"
keywords = ["log", "logging", "cli", "rlg", "tail"]
categories = ["command-line-utilities", "development-tools::debugging"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_cli"
path = "src/lib.rs"

[[bin]]
name = "rlg"
path = "src/main.rs"

[dependencies]
rlg = { version = "0.0.9", path = "../rlg" }
clap = { version = "4.6", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "warn"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
