[package]
name = "rlg-otlp"
version = "0.0.11"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
OpenTelemetry network exporter for rlg. Ships records over OTLP/HTTP
(JSON) to any OTel-compatible collector — Honeycomb, Datadog, Tempo,
Jaeger, otelcol.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-otlp"
readme = "README.md"
keywords = ["otlp", "opentelemetry", "exporter", "rlg", "logs"]
categories = ["development-tools::debugging", "network-programming"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_otlp"
path = "src/lib.rs"

[[example]]
name = "honeycomb"
path = "examples/honeycomb.rs"

[[bench]]
name = "serialise"
harness = false
path = "benches/serialise.rs"

[dependencies]
rlg = { version = "0.0.11", path = "../rlg" }
ureq = { version = "3.1", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
criterion = "0.8"
tempfile = "3"

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "deny"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
