[package]
name = "rlg-otlp"
version = "0.0.11"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
OpenTelemetry network exporter for rlg. Ships records over OTLP/HTTP
(JSON) to any OTel-compatible collector — Honeycomb, Datadog, Tempo,
Jaeger, otelcol.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-otlp"
readme = "README.md"
keywords = ["otlp", "opentelemetry", "exporter", "rlg", "logs"]
categories = ["development-tools::debugging", "network-programming"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_otlp"
path = "src/lib.rs"

[[example]]
name = "honeycomb"
path = "examples/honeycomb.rs"

[[bench]]
name = "serialise"
harness = false
path = "benches/serialise.rs"

[dependencies]
rlg = { version = "0.0.11", path = "../rlg" }
ureq = { version = "3.1", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Optional async HTTP transport. `rustls-tls` avoids openssl-sys and
# native-tls (both denied by `deny.toml`). `json` pulls in the small
# convenience methods; we already have `serde_json` for the manual
# path.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros"], optional = true }

[features]
# Sync HTTP transport (ureq). On by default — unchanged behaviour
# for consumers who don't opt in to `async`.
default = ["blocking"]
blocking = []
# Async HTTP transport (reqwest + rustls-tls). Enables the
# `AsyncOtlpExporter` type. See
# `docs/adr/0010-otlp-pluggable-transport.md`.
async = ["dep:reqwest", "dep:tokio"]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros", "net", "io-util"] }

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "deny"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
