[package]
name = "rlg-otlp"
version = "0.0.11"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
OpenTelemetry network exporter for rlg. Ships records over OTLP/HTTP
(JSON) to any OTel-compatible collector — Honeycomb, Datadog, Tempo,
Jaeger, otelcol.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-otlp"
readme = "README.md"
keywords = ["otlp", "opentelemetry", "exporter", "rlg", "logs"]
categories = ["development-tools::debugging", "network-programming"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_otlp"
path = "src/lib.rs"

[[example]]
name = "honeycomb"
path = "examples/honeycomb.rs"

[[example]]
name = "circuit_breaker"
path = "examples/circuit_breaker.rs"

# Async and gRPC examples require the corresponding cargo feature.
# Both examples ship a graceful fallback `main()` when the feature
# is off so the examples-smoke gate can compile them without extra
# feature flags.
[[example]]
name = "async_export"
path = "examples/async_export.rs"
required-features = ["async"]

[[example]]
name = "grpc_export"
path = "examples/grpc_export.rs"
required-features = ["grpc"]

[[bench]]
name = "serialise"
harness = false
path = "benches/serialise.rs"

[dependencies]
rlg = { version = "0.0.11", path = "../rlg" }
ureq = { version = "3.1", features = ["json"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

# Optional async HTTP transport. `rustls-tls` avoids openssl-sys and
# native-tls (both denied by `deny.toml`). `json` pulls in the small
# convenience methods; we already have `serde_json` for the manual
# path.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"], optional = true }
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros"], optional = true }

# Optional gRPC transport. `tonic` + `prost` provide the OTLP/gRPC
# wire path. `tls-ring` uses rustls with the `ring` crypto backend
# (matches our workspace TLS policy — no native-tls, no openssl-sys).
tonic = { version = "0.14", default-features = false, features = ["codegen", "channel", "tls-ring", "transport"], optional = true }
prost = { version = "0.14", optional = true }

[features]
# Sync HTTP transport (ureq). On by default — unchanged behaviour
# for consumers who don't opt in to `async`.
default = ["blocking"]
blocking = []
# Async HTTP transport (reqwest + rustls-tls). Enables the
# `AsyncOtlpExporter` type.
async = ["dep:reqwest", "dep:tokio"]
# gRPC transport (tonic + prost + rustls). Enables the
# `GrpcOtlpExporter` type. The OTLP/gRPC protobuf types are
# hand-carved to the minimal `ExportLogsServiceRequest` surface
# — see `src/grpc.rs`.
grpc = ["dep:tonic", "dep:prost", "dep:tokio"]

[dev-dependencies]
criterion = "0.8"
tempfile = "3"
tokio = { version = "1", default-features = false, features = ["rt", "time", "macros", "net", "io-util"] }

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "deny"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
