[package]
name = "rlg-redact"
version = "0.0.11"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
PII and secret redaction for rlg records. Built-in regex patterns for
credit cards, JWTs, OAuth bearers, emails, and IPv4 addresses, plus a
custom-pattern API. Sits between `Log::fire()` and the sink so logs
emitted to disk / OTLP / syslog are scrubbed.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-redact"
readme = "README.md"
keywords = ["rlg", "redact", "pii", "compliance", "logging"]
categories = ["development-tools::debugging"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_redact"
path = "src/lib.rs"

[[example]]
name = "scrub"
path = "examples/scrub.rs"

[[bench]]
name = "scrub"
harness = false
path = "benches/scrub.rs"

[dependencies]
rlg = { version = "0.0.11", path = "../rlg" }
regex = "1.12"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8"

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "deny"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
