[package]
name = "rlg-report"
version = "0.0.12"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
Log digest / analytics for rlg. Reads JSON-shaped rlg records from
a file or stdin and produces aggregation tables: count by level,
top components, top error messages, latency percentiles.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-report"
readme = "README.md"
keywords = ["rlg", "log", "analytics", "digest", "cli"]
categories = ["command-line-utilities", "development-tools::debugging"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_report"
path = "src/lib.rs"

[[bin]]
name = "rlg-report"
path = "src/main.rs"

[[example]]
name = "digest"
path = "examples/digest.rs"

[[bench]]
name = "aggregate"
harness = false
path = "benches/aggregate.rs"

[dependencies]
rlg = { version = "0.0.12", path = "../rlg" }
rlg-cli = { version = "0.0.12", path = "../rlg-cli" }
clap = { version = "4.6", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"

[dev-dependencies]
assert_cmd = "2"
criterion = "0.8"
predicates = "3"
tempfile = "3"

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "deny"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
