[package]
name = "rlg-test"
version = "0.0.11"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
Test utilities for downstream consumers of rlg. Capture log records
emitted inside a test scope and assert on them with the
`assert_logged!` macro.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-test"
readme = "README.md"
keywords = ["rlg", "logging", "test", "assertion", "capture"]
categories = ["development-tools::testing", "development-tools::debugging"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_test"
path = "src/lib.rs"

[[example]]
name = "capture"
path = "examples/capture.rs"

[[bench]]
name = "capture"
harness = false
path = "benches/capture.rs"

[dependencies]
rlg = { version = "0.0.11", path = "../rlg" }
parking_lot = "0.12"
serde_json = "1.0"

[dev-dependencies]
criterion = "0.8"

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "warn"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
