[package]
name = "rlg-tower"
version = "0.0.10"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
Tower middleware for rlg. Emits per-request structured access logs
for any `tower::Service<http::Request<_>>` — axum, tonic, hyper,
lambda_runtime — with method, path, status, latency, and trace-ID
propagation.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-tower"
readme = "README.md"
keywords = ["tower", "axum", "middleware", "rlg", "logging"]
categories = ["development-tools::debugging", "web-programming"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_tower"
path = "src/lib.rs"

[[example]]
name = "echo"
path = "examples/echo.rs"

[dependencies]
rlg = { version = "0.0.10", path = "../rlg" }
tower = { version = "0.5", default-features = false }
tower-layer = "0.3"
tower-service = "0.3"
http = "1"
pin-project-lite = "0.2"

[dev-dependencies]
http-body-util = "0.1"
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }
tower = { version = "0.5", features = ["util"] }

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "warn"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
