[package]
name = "rlg-wasm"
version = "0.0.11"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
WebAssembly bindings for rlg. Bring structured logging into browsers,
Deno, Cloudflare Workers, Bun, and any wasm-bindgen-capable host.
Records are rendered in any of the 14 rlg LogFormats and dispatched
to the host's console API.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg-wasm"
readme = "README.md"
keywords = ["wasm", "rlg", "logging", "browser", "cloudflare"]
categories = ["wasm", "development-tools::debugging"]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/Cargo.toml",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg_wasm"
path = "src/lib.rs"
# wasm-bindgen requires both rlib (for tests) and cdylib (for the
# WASM artifact). cdylib is wrapped behind cfg so doc builds and
# host-side `cargo test` stay clean.
crate-type = ["cdylib", "rlib"]

[[example]]
name = "hello"
path = "examples/hello.rs"

[[bench]]
name = "build"
harness = false
path = "benches/build.rs"

[dependencies]
rlg = { version = "0.0.11", path = "../rlg" }
serde_json = "1.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
criterion = "0.8"

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "deny"
unsafe_code = "deny"
unused_extern_crates = "warn"
missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"
dead_code = "deny"

[package.metadata.docs.rs]
all-features = true
