[package]
name = "rlg"
version = "0.0.11"
edition = "2024"
rust-version = "1.88.0"
license = "MIT OR Apache-2.0"
description = """
A near-lock-free structured logging library for Rust. Sub-microsecond
ingestion via a 65k-slot ring buffer (LMAX Disruptor pattern), deferred
formatting, and native OS sinks (`os_log` on macOS via `syslog(3)`,
`journald` on Linux). 14 output formats including JSON, MCP, OTLP,
ECS, GELF, CEF, and Logfmt.
"""
repository = "https://github.com/sebastienrousseau/rlg"
homepage = "https://rustlogs.com/"
documentation = "https://docs.rs/rlg"
readme = "README.md"
keywords = ["debugging", "log", "rlg", "logging", "tracing"]
categories = [
    "asynchronous",
    "development-tools",
    "development-tools::debugging",
    "data-structures",
]
authors = ["Sebastien Rousseau <sebastian.rousseau@gmail.com>"]
include = [
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/README.md",
    "/src/**",
    "/tests/**",
]

[lib]
name = "rlg"
path = "src/lib.rs"

[[bench]]
name = "benchmark"
harness = false
path = "benches/bench.rs"

[[bench]]
name = "log_bench"
harness = false
path = "benches/log_bench.rs"

[[bench]]
name = "config_bench"
harness = false
path = "benches/config_bench.rs"

[[bench]]
name = "competitive_bench"
harness = false
path = "benches/competitive_bench.rs"

[[example]]
name = "example_utils"
required-features = ["tokio"]

[[example]]
name = "example_config"
required-features = ["tokio"]

[dependencies]
config = "0.15.22"
crossbeam-queue = "0.3.12"
envy = "0.4.2"
euxis-commons = { version = "0.0.2", default-features = false, features = ["error", "config", "validation", "retry", "id", "time", "env"], package = "euxis-commons" }
hostname = "0.4.2"
itoa = "1.0.18"
log = "0.4.30"
miette = { version = "7.5.0", features = ["fancy"], optional = true }
notify = { version = "8.2.0", optional = true }
parking_lot = "0.12.5"
regex = "1.12.3"
ryu = "1.0.23"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
terminal_size = { version = "0.4", optional = true }
thiserror = "2.0.18"
tokio = { version = "1.52.3", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"], optional = true }
toml = "1.0.7"
tracing-core = "0.1.36"
tracing-subscriber = { version = "0.3", default-features = false, features = ["registry"], optional = true }

[build-dependencies]
version_check = "0.9.5"

[dev-dependencies]
criterion = "0.8.2"
env_logger = "0.11"
proptest = "1.5"
rlg-cli = { version = "0.0.11", path = "../rlg-cli" }
serial_test = "3"
tempfile = "3.27.0"
tokio = { version = "1.52.3", default-features = false, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
tokio-test = "0.4.5"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

# Loom concurrency proofs — only compiled under `--cfg loom`, see
# `tests/loom_engine.rs` and `.github/workflows/loom.yml`.
[target.'cfg(loom)'.dev-dependencies]
loom = "0.7"

[features]
default = []
debug_enabled = []
miette = ["dep:miette"]
tokio = ["dep:tokio", "dep:notify"]
tui = ["dep:terminal_size"]
tracing-layer = ["dep:tracing-subscriber"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = [
    "--generate-link-to-definition",
    "--cfg",
    "docsrs",
    "--document-private-items",
]
targets = ["x86_64-unknown-linux-gnu"]

[lints.rust]
missing_copy_implementations = "warn"
missing_docs = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)', 'cfg(docsrs)', 'cfg(kani)'] }
unstable_features = "warn"
unused_extern_crates = "warn"

bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "deny"

missing_debug_implementations = "forbid"
non_ascii_idents = "forbid"
unreachable_pub = "forbid"

dead_code = "deny"
deprecated_in_future = "deny"
ellipsis_inclusive_range_patterns = "deny"
explicit_outlives_requirements = "deny"
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
macro_use_extern_crate = "deny"
meta_variable_misuse = "deny"
noop_method_call = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
single_use_lifetimes = "deny"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused = { level = "deny", priority = -1 }
unused_features = "deny"
unused_import_braces = "deny"
unused_labels = "deny"
unused_lifetimes = "deny"
unused_macro_rules = "deny"
unused_qualifications = "deny"
variant_size_differences = "deny"

[package.metadata.clippy]
warn-lints = [
    "clippy::all",
    "clippy::pedantic",
    "clippy::cargo",
    "clippy::nursery",
]
